Fix profiling skill pitfalls discovered during IC11 investigation
Semicolons in -prof async args are eaten by /bin/sh -c in the Maven
exec plugin. Document the \; escaping. Add warnings about concurrent
processes during profiling, JMH lock file cleanup, SQL parser ORDER BY
limitation, and the jdk.unsupported --add-opens flag. Expand LDBC SF1
reference stats with WORK_AT edges, Company/Country counts, and
workFrom distribution.